--- a/client/play/index.html
+++ b/client/play/index.html
@@ -11,26 +11,21 @@
 		<link>
 	</head>
 	<body>
-	
 <div id="editor">//Code here excecutes once
 
 while(true){
 	//Code in here loops forever
 }</div>
-		<div id="game-div"></div>
-		<div id="buttonPanel">
+	    <div id="gameDiv">
+            <div id="canvasContainer"></div>
+            <div id="gamePanel"></div>
+        </div>
+		<div id="editorPanel">
 			<button id="runButton" onclick="world.loadCode(editor.getValue())">Run!</button>
 		</div>
-		<div id="info-div">
+		<div id="infoDiv">
 			<div id="tabs"></div>
 			<div id="content"></div>
 		</div>
 	</body>
-	<script>
-		var editor = ace.edit("editor");
-		editor.setTheme("ace/theme/twilight");
-		editor.session.setMode("ace/mode/javascript");
-		//editor.resize(10, 10);
-		//editor.setAutoScrollEditorIntoView(true);
-	</script>
 </html>
