--- a/src/play/index.html
+++ b/src/play/index.html
@@ -1,12 +1,12 @@
 <html>
 	<head>
-		<script src="/lib/p5.min.js"></script>
-		<script src="/lib/acorn.js"></script>
-		<script src="/lib/interpreter.js"></script>
+		<script src="../lib/p5.min.js"></script>
+		<script src="../lib/acorn.js"></script>
+		<script src="../lib/interpreter.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.4/ace.js"></script>
 		<script defer src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-        <script src="world.js"></script>
-		<script src="index.js"></script>
+        <script src="world.ts"></script>
+		<script src="index.ts"></script>
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<link>
 	</head>
