Cleaned up a few things, new API, added reset button

--- a/src/play/index.html
+++ b/src/play/index.html
@@ -5,7 +5,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!--<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
     <script src="index.ts"></script>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.scss">
 </head>
 	<body>
         <div id="editor"></div>
@@ -21,7 +21,7 @@
         </div>
         <div id="editorPanel">
             <button id="runButton" onclick="beginTests(this)">Start testing!</button>
-
+            <button id="resetButton" onclick="resetState(this)">Mr resetti</button>
         </div>
 		<div id="infoDiv">
 			<div id="tabs"></div>
