Updated UI, updated testing

--- a/src/play/index.html
+++ b/src/play/index.html
@@ -24,8 +24,15 @@
             <button id="resetButton" onclick="resetState(this)">Mr resetti</button>
         </div>
 		<div id="infoDiv">
-			<div id="tabs"></div>
-			<div id="content"></div>
+            <div id="infoPages">
+			    <div id="tabs"></div>
+			    <div id="content"></div>
+            </div>
+            <div id="infoPanel">
+                <div id="infoPanelOverlay" class="crt">
+                    <div class="bar"></div>
+                </div>
+            </div>
 		</div>
 	</body>
 </html>
