--- a/src/play/index.html
+++ b/src/play/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
     <script src="../lib/interpreter.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!--<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
@@ -29,9 +29,7 @@
 			    <div id="content"></div>
             </div>
             <div id="infoPanel">
-                <div id="infoPanelOverlay" class="crt">
-                    <div class="bar"></div>
-                </div>
+                <canvas id="infoPanelCanvas"></canvas>
             </div>
 		</div>
 	</body>
