Changed level API, added task rendering

--- a/src/play/index.html
+++ b/src/play/index.html
@@ -6,6 +6,8 @@
     <!--<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
     <script src="index.ts"></script>
     <link rel="stylesheet" type="text/css" href="index.scss">
+    <link rel="icon" href="/images/rover.png">
+    <title>Rover</title>
 </head>
 	<body>
         <div id="editor"></div>
