--- a/src/play/index.html
+++ b/src/play/index.html
@@ -11,7 +11,7 @@
 </head>
 	<body>
         <div id="editor"></div>
-	    <div id="gameDiv">
+	    <div id="gameDiv" oncontextmenu="return false;">
             <div id="canvasContainer"></div>
             <div id="gamePanel">
                 <div id="testSelect">
@@ -31,7 +31,7 @@
 			    <div id="content"></div>
             </div>
             <div id="infoPanel">
-                <canvas id="infoPanelCanvas"></canvas>
+                <canvas id="infoPanelCanvas" oncontextmenu="return false;"></canvas>
             </div>
 		</div>
 	</body>
