--- a/src/play/index.html
+++ b/src/play/index.html
@@ -1,22 +1,22 @@
 <html>
-<head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-    <script src="../lib/interpreter.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <!--<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
-    <script src="index.ts"></script>
-    <link rel="stylesheet" type="text/css" href="index.scss">
-    <link rel="icon" href="/images/rover.png">
-    <title>Rover</title>
-</head>
-	<body>
+    <head>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+        <script src="../lib/interpreter.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+        <!--<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
+        <script src="index.ts"></script>
+        <link rel="stylesheet" type="text/css" href="index.scss">
+        <link rel="icon" href="/images/rover.png">
+        <title>Rover</title>
+    </head>
+    <body>
         <div id="editor"></div>
-	    <div id="gameDiv" oncontextmenu="return false;">
-            <div id="canvasContainer"></div>
+        <div id="gameDiv">
+            <div id="canvasContainer" oncontextmenu="return false;"></div>
             <div id="gamePanel">
                 <div id="testSelect">
-                    <button class="buttonLeft" onclick="testsSelectorHandler(this)"><</button>
-                    <input class="testIndex" type="number" onchange="testsSelectorHandler(this)" value="1">
+                    <button class="buttonLeft" onclick="testsSelectorHandler(this)" disabled><</button>
+                    <input class="testIndex" onchange="testsSelectorHandler(this)" type="number" value="1">
                     <button class="buttonRight" onclick="testsSelectorHandler(this)">></button>
                 </div>
             </div>
@@ -25,14 +25,14 @@
             <button id="runButton" onclick="beginTests(this)">Start testing!</button>
             <button id="resetButton" onclick="resetState(this)">Mr resetti</button>
         </div>
-		<div id="infoDiv">
+        <div id="infoDiv">
             <div id="infoPages">
-			    <div id="tabs"></div>
-			    <div id="content"></div>
+                <div id="tabs"></div>
+                <div id="content"></div>
             </div>
             <div id="infoPanel">
                 <canvas id="infoPanelCanvas" oncontextmenu="return false;"></canvas>
             </div>
-		</div>
-	</body>
+        </div>
+    </body>
 </html>
