--- a/src/play/index.html
+++ b/src/play/index.html
@@ -23,7 +23,7 @@
         </div>
         <div id="editorPanel">
             <button id="runButton" onclick="beginTests(this)">Run code</button>
-            <button id="stepButton" onclick="draw()">Step code</button>
+            <button id="stepButton" onclick="stepButtonPress(this)">Step code</button>
             <button id="resetButton" onclick="resetState(this)">Reset</button>
             <datalist id="speedSliderMarks">
                 <option value="0" label="0%">
@@ -32,7 +32,7 @@
                 <option value="7.5" label="5%">
                 <option value="10" label="10%">
             </datalist>
-            <input id="speedSlider" type="range" min="0" max="10" step="0.5" onchange="changeSpeed(this)" list="speedSliderMarks">
+            <input id="speedSlider" type="range" min="0" max="50" step="0.5" onchange="changeSpeed(this)" list="speedSliderMarks">
         </div>
         <div id="infoDiv">
             <div id="infoPages">
