--- a/src/play/index.html
+++ b/src/play/index.html
@@ -1,15 +1,13 @@
 <html>
     <head>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-        <script src="../lib/interpreter.js"></script>
-        <script defer src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-        <!--<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
-        <script src="index.ts"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+        <script defer src="../lib/interpreter.js"></script>
+        <script defer src="index.ts"></script>
         <link rel="stylesheet" type="text/css" href="index.scss">
         <link rel="icon" href="/images/rover.png">
         <title>Rover</title>
     </head>
-    <body>
+    <body style="padding:0;margin:0">
         <div id="editor"></div>
         <div id="gameDiv">
             <div id="canvasContainer" oncontextmenu="return false;"></div>
