--- a/src/play/index.html
+++ b/src/play/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
         <script defer src="../lib/interpreter.js"></script>
         <script defer src="index.ts"></script>
         <link rel="stylesheet" type="text/css" href="index.scss">
