Info panel display overhaul

--- a/src/play/index.html
+++ b/src/play/index.html
@@ -38,8 +38,10 @@
                 <div id="content"></div>
             </div>
             <div id="infoPanel">
-                <canvas id="infoPanelCanvas" oncontextmenu="return false;"></canvas>
+                <div id="infoPanelTileData">
+                    <canvas id="infoPanelCanvas" width="32" height="32"></canvas>
+                </div>
+                <ul id="infoPanelTaskList"></ul>
             </div>
-        </div>
     </body>
 </html>
