Made canvases crisper, updated subdisplay

--- a/src/play/index.html
+++ b/src/play/index.html
@@ -43,5 +43,6 @@
                 </div>
                 <ul id="infoPanelTaskList"></ul>
             </div>
+        </div>
     </body>
 </html>
